# Jfloresm

./: README.md  main.py  pyproject.toml  tres.py  tresmejor.ipynb
